@@ -1,4 +1,4 @@
-$Id: README 46585 2018-02-10 06:43:26Z kakuto $
+$Id: README 46877 2018-03-07 22:32:14Z kakuto $
 Public domain.  Originally created by Karl Berry, 2005.
 
 Libraries we compile for TeX Live.
@@ -21,10 +21,10 @@ gd 2.2.5 - checked 30aug17
 gmp 6.1.2 - checked 16dec16
   http://ftp.gnu.org/gnu/gmp/
 
-graphite2 1.3.10 - checked 20jun17
+graphite2 1.3.11 - checked 05mar18
   http://sourceforge.net/projects/silgraphite/files/graphite2/
 
-harfbuzz 1.7.5 - checked 31jan18
+harfbuzz 1.7.6 - checked 07mar18
   http://www.freedesktop.org/software/harfbuzz/release/
 
 icu 60.2 - checked 11jan18
